fixed employment heigh clipping

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1188,6 +1188,13 @@ body.mobile-info-open {
     .grid { padding: 10px; }
 }
 
+
+@media (max-height: 660px) {
+    .employment-right p {
+        font-size: clamp(1rem, 2.5vw, 1.7rem);
+    }
+}
+
 @media (max-width: 540px) {
     .hero-paragraph {
         font-size: clamp(1rem, 4.5vw, 1.2rem);
